# Academic-Writing-Sorting-Project

./: README.md  benchmark_cpp_log.txt  benchmark_cpp_parallel_log.txt  benchmark_log.txt  benchmark_parallel_log.txt  results.csv  results_cpp_parallel.csv  results_cpp_single.csv  results_parallel.csv  results_single.csv
cpp/: CMakeLists.txt  README.md
cpp/data/: index.tsv
cpp/include/: benchmark_utils.hpp  dataset.hpp  sort_algorithms.hpp
cpp/src/: benchmark_parallel.cpp  benchmark_single.cpp
data/: int_duplicates_huge.pkl  int_duplicates_large.pkl  int_duplicates_medium.pkl  int_duplicates_small.pkl  int_duplicates_tiny.pkl  int_nearly_large.pkl  int_nearly_medium.pkl  int_nearly_small.pkl  int_nearly_tiny.pkl  int_random_large.pkl  int_random_large_t1.pkl  int_random_large_t2.pkl  int_random_large_t3.pkl  int_random_large_t4.pkl  int_random_large_t5.pkl  int_random_medium.pkl  int_random_medium_t1.pkl  int_random_medium_t2.pkl  int_random_medium_t3.pkl  int_random_medium_t4.pkl  int_random_medium_t5.pkl  int_random_small.pkl  int_random_small_t1.pkl  int_random_small_t2.pkl  int_random_small_t3.pkl  int_random_small_t4.pkl  int_random_small_t5.pkl  int_random_tiny.pkl  int_random_tiny_t1.pkl  int_random_tiny_t2.pkl  int_random_tiny_t3.pkl  int_random_tiny_t4.pkl  int_random_tiny_t5.pkl  int_reverse_large.pkl  int_reverse_medium.pkl  int_reverse_small.pkl  int_reverse_tiny.pkl  int_sorted_large.pkl  int_sorted_medium.pkl  int_sorted_small.pkl  (+81 more)
python/: benchmark.py  benchmark_bogo.py  benchmark_parallel.py  export_cpp_data.py  generate_data.py  visualize.py  (+2 more)
(+10 files in other folders)
